--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.4",
     "rxjs": "^6.0.0",
+    "validator": "^10.8.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
