--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/router": "^6.0.3",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.4",
     "rxjs": "^6.0.0",
     "validator": "^10.8.0",
