--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "helmet": "^3.15.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.4",
