--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
